--- a/t2.css
+++ b/t2.css
@@ -1,13 +1,11 @@
-
 body {
-    /* background: #000; */
-    line-height: 2;
+  /* background: #000; */
+  line-height: 2;
 }
 
 .c {
-    color: #fff;
-    opacity: 0
-    
+  color: #fff;
+  opacity: 0
 }
 
 @keyframes fadeIn {
@@ -26,15 +24,15 @@ body {
 }
 
 .content {
-    font-size: 108px;
-    padding: 200px 0;
-    text-align: center;
-    width: 100%;
-    margin: 0 auto;
-    
+  font-size: 108px;
+  /* padding: 200px 0; */
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+
 }
 
 .animated {
   /*animation-duration: 1s;*/
-   /*animation-fill-mode: both;*/
+  /*animation-fill-mode: both;*/
 }
